# summiting-the-pyramid

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: analytic_submission.md  analytic_submission.yml  observable_submission.yml
.github/workflows/: build.yml  delete-web-preview.yml
docs/: D3.rst  analytics.rst  analyticslist.rst  booleanlogic.rst  capability-abstraction.rst  changelog.rst  combiningobservables.rst  conf.py  datasource-technique.rst  datasources.rst  definitions.rst  detection-components.rst  detection-diagram.rst  evadability.rst  examplemappings.rst  futurework.rst  glossary_test.rst  index.rst  introduction.rst  levels.rst  levelsexplanation.rst  methodology.rst  overview.rst  precision-recall-robustness.rst  precision-recall.rst  quicklevels.rst  resources.rst  robustdetection.rst  scoringanalytic.rst  test_grid_table.rst  thanks.rst
docs/_static/: FinalConfidenceScores (3).xlsx  FinalConfidenceScores.xlsx  FinalConfidenceScores_Persistence via Registry.csv
docs/analytic-design/: chaining.rst  context.rst  detection-components.rst  detection-diagram.rst  index.rst  robustdetection.rst
docs/analytics/: ScoredAnalytics_05062025.csv  ScoredAnalytics_12062024.csv  Scored_Analytics_20220428.csv  Scored_Analytics_20230626.csv  Scored_Analytics_20230731.csv  Scored_Analytics_20230802.csv  __template_analytic.rst  access_token_manipulation.rst  adfind.rst  amsi_evasion.rst  amsi_evasion_grid_table.rst  amsi_evasion_list_table.rst  analytic.rst.template  archive_collected_data.rst  bloodhound.rst  dllhost_activity.rst  domain_account_discovery.rst  executable_download_webdav.rst  file_creation_date.rst  file_directory_discovery.rst  index.rst  link_download_webdav.rst  lsass_memory.rst  remote_registry.rst  service_registry_permissions_weakness_check.rst  service_registry_permissions_weakness_check_OLD.rst  (+2 more)
(+56 files in other folders)
