[tool.poetry]
name = "summiting-the-pyramid"
version = "3.0.0"
description = ""
authors = [
    "Ross Weisman <rpweisman@mitre.org>",
    "Roman Daszczyszak <romand@mitre.org>",
]
license = "Apache"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
python-slugify = "^8.0.4"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
bumpver = "^2022.1119"
pytest = "^7.1.2"
pytest-cov = "2.11.1"
Sphinx = "^6.2.0"
sphinx-autobuild = "^2021.3.14"
sphinx-wagtail-theme = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "v0.0.36"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
# pep440_version does not have the "v" prefix
"pyproject.toml" = ['version = "{pep440_version}"']
"docs/conf.py" = ['version = "{version}"']
